--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.2.1"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
